- O Comando `/meme fodase` foi renomeado para `/meme fds`s
- Nível de Batalha foi aumentado para `20`
- Os prêmios da roleta foram reajustados
- Gigantesca mudança no valor dos temas e cores.
- Grande mudança no valor das caças e seus rolls
- Nova formula de cálculo de dano efetivo
- Diminuido a quantidade de demônios, gigantes e anjos mínimos no perfil para começar a ser afetado pela inatividade

### Fixed

- Árvore de Habilidades do Assassino estava com uma ordem errada
- Opção de abençõar status com pontos maior que 15, bloqueando o usuário de usar mais bênçãos
- Erros de português no comando `/ship`
- O valor de lucro da roleta foi ajustado para todas apostas que duplicava o valor real.
- Erros do RPG: Muitos erros aconteciam como 'Cannot read [0] of undefined'. Isso foi resolvido com um novo sistema de interações que, eu creio, que vão arrumar o problema, que era causado por lags entre a Menhera e o Discord
- Habilidades ignoravam a chance de acerto, fazendo com que sempre acertassem, mesmo que o usuário a errasse
- Habiliades de cura não ultrapassam mais o limite de vida
- Buffs de raças que não eram contabilizados
- Efeitos do **DEFENSOR** Não são mais infinitas
- Resolvido problema do veneno que ignorava armaduras
- Resolvido problema que baixos danos e altas armaduras resultavam em cura, ao invés de dano
- Fugir da Dungeon mostra uma mensagem, ao invés de só travar o comando

### Removed

- Colocação do usuário no top ao caçar
- Comando `/xandao`
- **Palavrões:** O Discord quer ser uma referência de um local seguro, por este motivo, a Menhera não pode falar palavrões :(
- Subcomando `/config censura`
- Comando `/avatar`

## [4.0.H-BETA] - 2022-03-01

### Added

- Os comandos do RPG agora tem um botão extra para terminar o comando na hora para não ter que esperar o tempo de execução para utilizar outro comando